Dev Deploy - UI Fix - Hero, Btn, Space align

--- a/style.css
+++ b/style.css
@@ -6270,7 +6270,9 @@ blockquote {
 /* courses */
 
 .course-hero {
-  padding: 40px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 80px;
   position: relative;
 }
 
@@ -6278,13 +6280,14 @@ blockquote {
   width: 100%;
   display: flex;
   gap: 10px;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
+
 }
 
 .enroll-btn {
   position: relative;
-  padding: 0.5rem 1rem;
+  padding: 1rem 1rem;
   font-size: 1.1rem;
   font-weight: bold;
   color: #ffffff;
@@ -6344,9 +6347,8 @@ blockquote {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  justify-content: center;
+  justify-content: space-between;
   gap: 5px;
-  width: 100%;
 }
 
 @media (min-width: 768px) {
@@ -6426,6 +6428,7 @@ blockquote {
 
 .image-content {
   width: 100%;
+  max-width: 600px;
 }
 
 @media (min-width: 1024px) {
@@ -6467,10 +6470,17 @@ blockquote {
   text-decoration: none;
 }
 
+/* placement */
+
+.placement{
+  margin-top: 50px;
+}
+
 /* benefits */
 
 .benfits-conatiner {
   position: relative;
+  margin-top: 50px;
 }
 
 .benefits {
